force-app/main/default/objects/Migrated_Asset_Data__c/Migrated_Asset_Data__c.object-meta.xml
<CustomObject>
    <label>Migrated Asset Data</label>
    <nameField>
        <label>Migrate Asset Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Migrated Asset Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>