force-app/main/default/objects/Migrated_Asset_Data__c/fields/Arr__c.field-meta.xml
<CustomField>
    <fullName>Arr__c</fullName>
    <label>Arr</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>