force-app/main/default/objects/Migrated_Asset_Data__c/fields/Asset_Id__c.field-meta.xml
<CustomField>
    <fullName>Asset_Id__c</fullName>
    <label>Asset Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>