force-app/main/default/objects/Migrated_Asset_Data__c/fields/isPerpetual__c.field-meta.xml
<CustomField>
    <fullName>isPerpetual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isPerpetual</label>
    <type>Checkbox</type>
</CustomField>