force-app/main/default/objects/Migrated_Asset_Data__c/fields/Maintenance_SKU__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_SKU__c</fullName>
    <label>Maintenance SKU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>