force-app/main/default/objects/Migrated_Asset_Data__c/fields/Maintenance_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Unit_Price__c</fullName>
    <label>Maintenance Unit Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>