force-app/main/default/objects/Migrated_Asset_Data__c/fields/Migrated_Account__c.field-meta.xml
<CustomField>
    <fullName>Migrated_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Migrated Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Migrate_Asset_Data</relationshipName>
    <type>Lookup</type>
</CustomField>