force-app/main/default/objects/Migrated_Asset_Data__c/fields/Negotiation_Type__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Type__c</fullName>
    <label>Negotiation Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>