force-app/main/default/objects/Migrated_Asset_Data__c/fields/Wrapper__c.field-meta.xml
<CustomField>
    <fullName>Wrapper__c</fullName>
    <label>Wrapper</label>
    <length>255</length>
    <type>Text</type>
</CustomField>