force-app/main/default/objects/Migrated_Asset_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Migrated_Account__c</columns>
    <columns>Batch__c</columns>
    <columns>Group__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Batch__c</field>
        <operation>equals</operation>
        <value>4</value>
    </filters>
    <label>All</label>
    <language>en_US</language>
</ListView>